# webcamrecorder

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
tests/app/: test_AnalyzeVideo.py  test_EventRecording.py  test_SendMail.py
tests/domain/: test_Frame.py  test_MailSender.py  test_VideoSource.py
webcamrecorder/: __main__.py
webcamrecorder/app/: AnalyzeVideo.py  ContinuousRecording.py  DetectMotion.py  EventRecording.py  IAnalyzeVideo.py  IContinuousRecording.py  IDetectMotion.py  IEventRecording.py  ISendMail.py  ITimerEventRecording.py  ITimerRecording.py  SendMail.py  TimerEventRecording.py  TimerRecording.py  __init__.py
webcamrecorder/domain/: Frame.py  FrameQueue.py  MailSender.py  VideoSource.py  WebcameraSource.py  __init__.py
